--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -3,7 +3,9 @@
 body,
 .site-nav,
 h1, h2, h3, h4, h5, h6 {
-  font-family: "Nanum Pen Script", "Segoe UI", sans-serif;
+  font-family: "Coming Soon", cursive;
+  font-weight: 400;
+  font-style: normal;
 }
 
 /* 코드 블록은 그대로 monospace 유지 */
