--- a/_includes/head_custom.html
+++ b/_includes/head_custom.html
@@ -1,4 +1,10 @@
 <!-- _includes/head_custom.html -->
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
+<!-- ① 영문: Coming Soon -->
 <link href="https://fonts.googleapis.com/css2?family=Coming+Soon&display=swap" rel="stylesheet">
+
+<!-- ② 한글: Nanum Pen Script (손글씨 느낌) -->
+<link href="https://fonts.googleapis.com/css2?family=Nanum+Pen+Script&display=swap" rel="stylesheet">
+
