--- a/assets/css/custom.scss
+++ b/assets/css/custom.scss
@@ -3,16 +3,16 @@
 
 /* 1) 직접 호스팅한 나눔바른펜 등록 */
 @font-face {
-  font-family: "NanumBarunPen";
-  src: url("/assets/fonts/NanumBarunPen-Regular.ttf") format("truetype");
+  font-family: "NanumSquareNeo";
+  src: url("/assets/fonts/NanumSquareNeo-Regular.ttf") format("truetype");
   font-weight: 400;
   font-style: normal;
   font-display: swap;    /* FOUT 최소화 */
 }
 
 @font-face {
-  font-family: "NanumBarunPen";
-  src: url("/assets/fonts/NanumBarunPen-Bold.ttf") format("truetype");
+  font-family: "NanumSquareNeo";
+  src: url("/assets/fonts/NanumSquareNeo-Bold.ttf") format("truetype");
   font-weight: 700;
   font-style: normal;
   font-display: swap;
@@ -24,7 +24,7 @@
 :root {
   --font-body:
     "Coming Soon",          /* 영문 */
-    "NanumBarunPen",        /* 한글 */
+    "NanumSquareNeo",        /* 한글 */
     cursive, sans-serif;
 
   --font-header: var(--font-body);
