--- a/assets/css/custom.scss
+++ b/assets/css/custom.scss
@@ -1,32 +1,13 @@
 ---
 ---
-/* 0. Google Fonts로 불러온 'Coming Soon'은 head_custom.html에 이미 링크돼 있다고 가정 */
 
-/* 1. 자가 호스팅 Nanum Square Neo (Regular + Bold) */
 @font-face {
   font-family: "NanumSquareNeo";
   src: url("/assets/fonts/NanumSquareNeoR.ttf") format("truetype");
   font-weight: 400;
   font-display: swap;
 }
-@font-face {
-  font-family: "NanumSquareNeo";
-  src: url("/assets/fonts/NanumSquareNeoB.ttf") format("truetype");
-  font-weight: 700;
-  font-display: swap;
-}
 
-/* 2. 사이트 전체 글꼴 지정 (헤더/본문/사이드바) */
-body,
-.site-nav,
-h1, h2, h3, h4, h5, h6 {
-  font-family:
-    "Coming Soon",          /* 영문 */
-    "NanumSquareNeo",       /* 한글 */
-    sans-serif;             /* 폴백 */
-}
-
-/* 3. 코드 블록은 그대로 고정폭 */
-pre, code {
-  font-family: Menlo, Monaco, Consolas, "Courier New", monospace;
+body {
+  font-family: "Coming Soon", "NanumSquareNeo", sans-serif;
 }
