--- a/_includes/head_custom.html
+++ b/_includes/head_custom.html
@@ -2,3 +2,4 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
 <link href="https://fonts.googleapis.com/css2?family=Coming+Soon&display=swap" rel="stylesheet">
+<script src="{{ '/assets/js/heading-numbers.js' | relative_url }}"></script>
