--- a/_includes/head_custom.html
+++ b/_includes/head_custom.html
@@ -1,5 +1,6 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link rel="stylesheet" href="{{ '/assets/css/override.css' | relative_url }}">
 
 <link href="https://fonts.googleapis.com/css2?family=Coming+Soon&display=swap" rel="stylesheet">
 <script src="{{ '/assets/js/heading-numbers.js' | relative_url }}"></script>
