--- a/assets/css/override.css
+++ b/assets/css/override.css
@@ -18,10 +18,10 @@
   .page-content,
   .main-content,
   #main-content {
-    padding-left: 0 !important;
+    padding-left: 50px !important;
     padding-right: 0 !important;
-    margin-left: 0 !important;
-    border-left: 0 !important;
+    margin-left: 50px !important;
+    border-left: 50px !important;
   }
 
   /* 2) 본문 실제 폭: 좌측에 딱 붙이되, 너무 넓어지지 않도록 상한선 */
